--- a/templates/groupManager.html
+++ b/templates/groupManager.html
@@ -1,7 +1,10 @@
 <div class="tl-panel">
 	<div class="tl-hdr">
-		<div id="tl-drag" class="tl-drag"></div>
+		<div id="tl-drag" class="tl-drag">
+			<h1 class="tl-title">Token Loot</h1>
+		</div>
 		<div class="tl-actions">
+			<button id="tl-collapse-all" class="tl-btn">Collapse All</button>
 			<button id="tl-add" class="tl-btn tl-primary">Add Loot Group</button>
 			<button id="tl-close" class="tl-btn">Close</button>
 		</div>
