--- a/templates/distributionBlock.html
+++ b/templates/distributionBlock.html
@@ -1,5 +1,6 @@
-<div class="tl-distribution-block" data-block-id="{{block.id}}">
+<div class="tl-distribution-block" data-block-id="{{block.id}}" data-type="{{block.type}}">
 	<div class="tl-block-hdr">
+		<div class="tl-collapse-arrow"><i class="fas fa-chevron-down"></i></div>
 		<input class="tl-block-name" value="{{block.name}}" placeholder="Block Name" />
 		<div class="tl-distribution-buttons">
 			<button class="tl-btn tl-distribution-btn {{block.allActive}}" data-type="all">All</button>
@@ -9,21 +10,23 @@
 		<label class="tl-allow-dup"><input type="checkbox" class="tl-allow-dup-input" {{block.allowDuplicatesChecked}} /> Allow duplicates</label>
 		<button class="tl-btn tl-danger tl-block-delete" title="Remove Block"><i class="fas fa-trash"></i></button>
 	</div>
-	<div class="tl-distribution-config">
-		<div class="tl-config-pick" {{block.pickDisplay}}>
-			<label>Pick</label>
-			<input class="tl-num tl-distribution-count" type="number" min="1" value="{{block.count}}" />
+	<div class="tl-block-body">
+		<div class="tl-distribution-config">
+			<div class="tl-config-pick" {{block.pickDisplay}}>
+				<label>Pick</label>
+				<input class="tl-num tl-distribution-count" type="number" min="1" value="{{block.count}}" />
 
+			</div>
+			<div class="tl-config-chance" {{block.chanceDisplay}}>
+				<label>Min Rolls</label>
+				<input class="tl-num tl-ch-min" type="number" min="0" value="{{block.chanceMin}}" title="Minimum number of items to roll for" />
+				<label>Max Rolls</label>
+				<input class="tl-num tl-ch-max" type="number" min="0" value="{{block.chanceMax}}" title="Maximum number of items to roll for" />
+			</div>
 		</div>
-		<div class="tl-config-chance" {{block.chanceDisplay}}>
-			<label>Min</label>
-			<input class="tl-num tl-ch-min" type="number" min="0" value="{{block.chanceMin}}" />
-			<label>Max</label>
-			<input class="tl-num tl-ch-max" type="number" min="0" value="{{block.chanceMax}}" />
+		<div class="tl-9op tl-items tl-items-list" data-block-id="{{block.id}}">
+			<!-- item rows injected here -->
 		</div>
-	</div>
-	<div class="tl-drop tl-items tl-items-list" data-block-id="{{block.id}}">
-		<!-- item rows injected here -->
 	</div>
 </div>
 
