--- a/templates/groupManager.html
+++ b/templates/groupManager.html
@@ -1,6 +1,6 @@
 <div class="tl-panel">
-	<div class="tl-hdr">
-		<div id="tl-drag" class="tl-drag">
+	<div class="tl-hdr" id="tl-drag">
+		<div class="tl-drag">
 			<h1 class="tl-title">Token Loot</h1>
 		</div>
 		<div class="tl-actions">
