--- a/templates/itemRow.html
+++ b/templates/itemRow.html
@@ -1,4 +1,4 @@
-<div class="tl-item-row" data-uuid="{{item.uuid}}">
+<div class="tl-item-row {{item.invalidClass}}" data-uuid="{{item.uuid}}" {{item.invalidTitle}}>
 	<img class="tl-item-img" src="{{item.img}}" alt="" />
 	<span class="tl-item-name">{{item.name}}</span>
 	<input class="tl-item-chance" type="number" min="0" max="100" value="{{item.chance}}" />
