--- a/templates/distributionBlock.html
+++ b/templates/distributionBlock.html
@@ -3,16 +3,18 @@
 		<div class="tl-collapse-arrow"><i class="fas fa-chevron-down"></i></div>
 		<input class="tl-block-name" value="{{block.name}}" placeholder="Block Name" />
 		<div class="tl-distribution-buttons">
-			<button class="tl-btn tl-distribution-btn {{block.allActive}}" data-type="all">All</button>
-			<button class="tl-btn tl-distribution-btn {{block.pickActive}}" data-type="pick">Pick N</button>
-			<button class="tl-btn tl-distribution-btn {{block.chanceActive}}" data-type="chance">Chances</button>
+			<button class="tl-btn tl-distribution-btn {{block.chanceActive}}" data-type="chance" title="Roll each item's chance independently">Chances</button>
+			<button class="tl-btn tl-distribution-btn {{block.pickActive}}" data-type="pick" title="Randomly select N items from this block">Pick N</button>
+			<button class="tl-btn tl-distribution-btn {{block.allActive}}" data-type="all" title="Grant every item in this block">All</button>
 		</div>
 		<div class="tl-block-io">
-			<button class="tl-btn tl-btn-sm tl-block-export" title="Export Block JSON">Export</button>
-			<button class="tl-btn tl-btn-sm tl-block-import" title="Import Block JSON">Import</button>
+			<button class="tl-btn tl-btn-sm tl-block-export" title="Download Block as JSON"><i class="fas fa-download"></i> Export</button>
+			<button class="tl-btn tl-btn-sm tl-block-import" title="Upload Block from JSON"><i class="fas fa-upload"></i> Import</button>
 		</div>
-		<label class="tl-auto-equip"><input type="checkbox" class="tl-auto-equip-input" {{block.autoEquipChecked}} /> Auto-equip</label>
-		<label class="tl-allow-dup"><input type="checkbox" class="tl-allow-dup-input" {{block.allowDuplicatesChecked}} /> Allow duplicates</label>
+		<div class="tl-option-chips">
+			<button class="tl-btn tl-chip tl-chip-toggle tl-chip-auto {{block.autoEquipActive}}" data-chip="auto" title="Automatically equip granted items when possible">Auto-equip</button>
+			<button class="tl-btn tl-chip tl-chip-toggle tl-chip-dup {{block.allowDupActive}}" data-chip="dup" title="Allow the same item to be granted multiple times">Allow duplicates</button>
+		</div>
 		<button class="tl-btn tl-danger tl-block-delete" title="Remove Block"><i class="fas fa-trash"></i></button>
 	</div>
 	<div class="tl-block-body">
@@ -23,11 +25,15 @@
 
 			</div>
 			<div class="tl-config-chance" {{block.chanceDisplay}}>
-				<label class="tl-use-bounds"><input type="checkbox" class="tl-use-bounds-input" {{block.useChanceBoundsChecked}} /> Force Qty </label>
-				<label>Min Rolls</label>
-				<input class="tl-num tl-ch-min" type="number" min="0" value="{{block.chanceMin}}" {{block.boundsInputsDisabled}} title="Minimum number of items to roll for" />
-				<label>Max Rolls</label>
-				<input class="tl-num tl-ch-max" type="number" min="0" value="{{block.chanceMax}}" {{block.boundsInputsDisabled}} title="Maximum number of items to roll for" />
+				<div class="tl-option-chips">
+					<button class="tl-btn tl-chip tl-chip-toggle tl-chip-force {{block.forceQtyActive}}" data-chip="force" title="Set a specific number of items to roll for (uses Min/Max Rolls)">Number of Items</button>
+				</div>
+				<div class="tl-chance-bounds" {{block.chanceBoundsDisplay}}>
+					<label>Min Rolls</label>
+					<input class="tl-num tl-ch-min" type="number" min="0" value="{{block.chanceMin}}" title="Minimum number of items to roll for" />
+					<label>Max Rolls</label>
+					<input class="tl-num tl-ch-max" type="number" min="0" value="{{block.chanceMax}}" title="Maximum number of items to roll for" />
+				</div>
 			</div>
 		</div>
 		<div class="tl-9op tl-items tl-items-list" data-block-id="{{block.id}}">
