--- a/templates/groupManager.html
+++ b/templates/groupManager.html
@@ -4,6 +4,7 @@
 			<h1 class="tl-title">Token Loot</h1>
 		</div>
 		<div class="tl-actions">
+			<input type="text" id="tl-search" class="tl-search" placeholder="Search groups..." autocomplete="off">
 			<button id="tl-collapse-all" class="tl-btn">Collapse All</button>
 			<button id="tl-add" class="tl-btn tl-primary">Add Loot Group</button>
 			<button id="tl-close" class="tl-btn">Close</button>
@@ -11,4 +12,3 @@
 	</div>
 	<div id="tl-groups" class="tl-groups"></div>
 </div>
-
